Finish animating new book form

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <button id="submit">Add</button>
       </form>
       <button id="addBook">
-        <i class="fas fa-plus"></i>
+        <i id="plus" class="fas fa-plus"></i>
       </button>
     </main>
     <script src="index.js"></script>
