Fix form focusing while hidden bug

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
       <h1>Library</h1>
       <section id="library"></section>
-      <form class="hidden">
+      <form class="hiding">
         <h3 class="add-book-title">Add Book</h3>
         <label for="bookTitle">Title:</label>
         <input id="bookTitle" placeholder="Title" required type="text" />
