--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
   <body>
     <main>
       <h1>Library</h1>
+      <section id="instructions">
+        <h3 class="instructions-heading">Welcome to your library!</h3>
+        <p>Press the button below to get started.</p>
+      </section>
       <section id="library"></section>
       <form class="hiding">
         <h3 class="add-book-title">Add Book</h3>
