Make starter instructions clearer

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>Library</h1>
       <section id="instructions">
         <h3 class="instructions-heading">Welcome to your library!</h3>
-        <p>Press the button below to get started.</p>
+        <p>Press the button in the corner to get started.</p>
       </section>
       <section id="library"></section>
       <form class="hiding">
