Add more starter instructions

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <h1>Library</h1>
       <section id="instructions">
         <h3 class="instructions-heading">Welcome to your library!</h3>
+        <p>Use me to keep track of books you've read or want to read.</p>
         <p>Press the button in the corner to get started.</p>
       </section>
       <section id="library"></section>
